--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -7,9 +7,11 @@ http {
 
     server {
         listen 8080;
+        root /Users/ben/work;
+        # set $template_root /Users/ben/work;
 
         location ~ ^/$ {
-            content_by_lua_file index.lua;
+            content_by_lua_file ctrls/index.lua;
             lua_code_cache off;
         }
 
