--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -7,13 +7,20 @@ http {
 
     server {
         listen 8080;
-        root /Users/ben/work;
-        # set $template_root /Users/ben/work;
+
+        root .;
+        set $template_root $document_root/views;
 
         location ~ ^/$ {
+            default_type text/html;
             content_by_lua_file ctrls/index.lua;
             lua_code_cache off;
         }
 
+        location /address {
+            default_type 'text/html';
+            content_by_lua_file ctrls/address.lua;
+            lua_code_cache off;
+        }
     }
 }
