--- a/conf/nginx-development.conf
+++ b/conf/nginx-development.conf
@@ -22,5 +22,11 @@ http {
             content_by_lua_file ctrls/address.lua;
             lua_code_cache off;
         }
+
+        location /search {
+            default_type 'text/html';
+            content_by_lua_file ctrls/search.lua;
+            lua_code_cache off;
+        }
     }
 }
