--- a/conf/nginx-production.conf
+++ b/conf/nginx-production.conf
@@ -34,13 +34,19 @@ http {
         location ~ ^/$ {
             default_type text/html;
             content_by_lua_file ctrls/index.lua;
-            lua_code_cache off;
+            lua_code_cache on;
         }
 
         location /address {
             default_type 'text/html';
             content_by_lua_file ctrls/address.lua;
-            lua_code_cache off;
+            lua_code_cache on;
+        }
+
+        location /search {
+            default_type 'text/html';
+            content_by_lua_file ctrls/search.lua;
+            lua_code_cache on;
         }
     }
 }
