--- a/conf/nginx-production.conf
+++ b/conf/nginx-production.conf
@@ -48,5 +48,11 @@ http {
             content_by_lua_file ctrls/search.lua;
             lua_code_cache on;
         }
+
+        location /block {
+            default_type 'text/html';
+            content_by_lua_file ctrls/block.lua;
+            lua_code_cache on;
+        }
     }
 }
