--- a/conf/nginx-development.conf
+++ b/conf/nginx-development.conf
@@ -28,5 +28,11 @@ http {
             content_by_lua_file ctrls/search.lua;
             lua_code_cache off;
         }
+
+        location /block {
+            default_type 'text/html';
+            content_by_lua_file ctrls/block.lua;
+            lua_code_cache off;
+        }
     }
 }
