--- a/conf/nginx-development.conf
+++ b/conf/nginx-development.conf
@@ -34,5 +34,15 @@ http {
             content_by_lua_file ctrls/block.lua;
             lua_code_cache off;
         }
+
+        location /api {
+            default_type 'text/html';
+            content_by_lua_file ctrls/api.lua;
+            lua_code_cache off;
+        }
+
+        location ~* ^/api/(.*) {
+          proxy_pass http://127.0.0.1:8000/$1$is_args$args;
+        }
     }
 }
