--- a/conf/nginx-production.conf
+++ b/conf/nginx-production.conf
@@ -54,5 +54,9 @@ http {
             content_by_lua_file ctrls/block.lua;
             lua_code_cache on;
         }
+
+        location ~* ^/api/(.*) {
+          proxy_pass http://127.0.0.1:8000/$1$is_args$args;
+        }
     }
 }
