--- a/conf/nginx-production.conf
+++ b/conf/nginx-production.conf
@@ -15,8 +15,8 @@ http {
         listen 443 ssl;
         server_name _;
 
-        ssl_certificate /home/ton/.acme.sh/explorer.test.ton.cryptoprocessing.io/fullchain.cer;
-        ssl_certificate_key /home/ton/.acme.sh/explorer.test.ton.cryptoprocessing.io/explorer.test.ton.cryptoprocessing.io.key;
+        ssl_certificate /data/fullchain.cer;
+        ssl_certificate_key /data/explorer.test.ton.cryptoprocessing.io.key;
         ssl_dhparam /etc/ssl_certs/dhparam.pem;
         ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
         ssl_session_cache shared:SSL:10m;
