--- a/conf/nginx-production.conf
+++ b/conf/nginx-production.conf
@@ -55,6 +55,12 @@ http {
             lua_code_cache on;
         }
 
+        location /api {
+            default_type 'text/html';
+            content_by_lua_file ctrls/api.lua;
+            lua_code_cache on;
+        }
+
         location ~* ^/api/(.*) {
           proxy_pass http://127.0.0.1:8000/$1$is_args$args;
         }
